[gd_scene load_steps=26 format=3 uid="uid://yaees81s54cq"]

[ext_resource type="PackedScene" uid="uid://5oivm5m5iwfl" path="res://Scenes/knight.tscn" id="2_bo1nx"]
[ext_resource type="PackedScene" uid="uid://douvb6l2q605h" path="res://Assets/Enviorment/Assets/gltf/wall_doorway.gltf" id="5_344ge"]
[ext_resource type="PackedScene" uid="uid://batlmjxr00op8" path="res://Assets/Enviorment/Assets/gltf/floor_tile_large.gltf" id="6_6bp64"]
[ext_resource type="PackedScene" uid="uid://byfkmpn4aupyl" path="res://Assets/Enviorment/Assets/gltf/wall.gltf" id="6_ynf5e"]
[ext_resource type="PackedScene" uid="uid://oo1cjpdq1kyo" path="res://Assets/Enviorment/Assets/gltf/table_long.gltf" id="7_6bp64"]
[ext_resource type="PackedScene" uid="uid://clfijujufgqh3" path="res://Assets/Enviorment/Assets/gltf/wall_corner.gltf" id="7_hptm8"]
[ext_resource type="Texture2D" uid="uid://2ysudjh16i5s" path="res://Assets/buttonLong_brown.png" id="8_hptm8"]
[ext_resource type="Script" uid="uid://nr47cbrvoe1k" path="res://Scripts/paused.gd" id="9_6iyac"]
[ext_resource type="Texture2D" uid="uid://cjrwm07ssfikd" path="res://Assets/buttonLong_brown_pressed.png" id="9_d1ilt"]
[ext_resource type="FontFile" uid="uid://drbd6gy16lw6i" path="res://Assets/DungeonFont.ttf" id="10_6iyac"]
[ext_resource type="PackedScene" uid="uid://biy1a8fcemvfh" path="res://Assets/Enviorment/Assets/gltf/chair.gltf" id="11_h1bgf"]
[ext_resource type="PackedScene" uid="uid://cs832kfa15y21" path="res://Assets/Enviorment/Assets/gltf/wall_half.gltf" id="11_hibaj"]
[ext_resource type="PackedScene" uid="uid://jim056awomob" path="res://Scenes/skeleton_minion.tscn" id="12_b3802"]
[ext_resource type="PackedScene" uid="uid://cafv831jlc0oi" path="res://Assets/Enviorment/Assets/gltf/ceiling_tile.gltf" id="12_pdsj5"]
[ext_resource type="PackedScene" uid="uid://dipxnbghqfgdj" path="res://Scenes/torch_mounted.tscn" id="13_fevyy"]
[ext_resource type="PackedScene" uid="uid://3nelqtarsda5" path="res://Assets/Enviorment/Assets/gltf/box_stacked.gltf" id="15_pdsj5"]
[ext_resource type="PackedScene" uid="uid://co1ao67v7iif7" path="res://Assets/Enviorment/Assets/gltf/crates_stacked.gltf" id="16_ee4r6"]
[ext_resource type="PackedScene" uid="uid://djbj3eb130886" path="res://Scenes/chest_gold.tscn" id="17_gt3je"]
[ext_resource type="Texture2D" uid="uid://biqadvvhmtbo8" path="res://Assets/Hearts_Red_1.png" id="19_u50mg"]
[ext_resource type="Texture2D" uid="uid://bwxlbf2rqu8f0" path="res://Assets/PNG/panel_brown.png" id="21_pdsj5"]
[ext_resource type="Script" uid="uid://dcv5cofxh12r4" path="res://Scripts/end.gd" id="23_cbgmd"]
[ext_resource type="Script" uid="uid://b1jxm3sfrwwmr" path="res://Scripts/enemy_spawner.gd" id="23_gt3je"]
[ext_resource type="PackedScene" uid="uid://dbof5nyygafsm" path="res://Scenes/skeleton_warrior.tscn" id="24_3pmx8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hibaj"]
size = Vector3(0.001, 1, 4)

[sub_resource type="Environment" id="Environment_gt3je"]
ambient_light_source = 2
ambient_light_color = Color(0.864274, 0.767198, 0.646524, 1)

[node name="Main" type="Node3D"]
process_mode = 1

[node name="Knight" parent="." instance=ExtResource("2_bo1nx")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 1, 0)
SPEED = 0.8
JUMP_SPEED = 1.5

[node name="table_long2" parent="." instance=ExtResource("7_6bp64")]

[node name="Walls" type="Node3D" parent="."]

[node name="wall2" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 0, 2)

[node name="wall6" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(1, 0, 5.68434e-15, 0, 1, 0, -5.68434e-15, 0, 1, 2, 0, 6)

[node name="wall7" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(1, 0, 5.68434e-15, 0, 1, 0, -5.68434e-15, 0, 1, -2, 0, 6)

[node name="wall4" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6, 0, 2)

[node name="wall_corner4" parent="Walls" instance=ExtResource("7_hptm8")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -6, 0, 6)

[node name="wall_corner5" parent="Walls" instance=ExtResource("7_hptm8")]
transform = Transform3D(7.54979e-08, 0, -1, 0, 1, 0, 1, 0, 7.54979e-08, 6, 0, 6)

[node name="wall8" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 4, 2)

[node name="wall9" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(1, 0, 5.68434e-15, 0, 1, 0, -5.68434e-15, 0, 1, 2, 4, 6)

[node name="wall10" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(1, 0, 5.68434e-15, 0, 1, 0, -5.68434e-15, 0, 1, -2, 4, 6)

[node name="wall11" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6, 4, 2)

[node name="wall_corner6" parent="Walls" instance=ExtResource("7_hptm8")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -6, 4, 6)

[node name="wall_corner7" parent="Walls" instance=ExtResource("7_hptm8")]
transform = Transform3D(7.54979e-08, 0, -1, 0, 1, 0, 1, 0, 7.54979e-08, 6, 4, 6)

[node name="wall3" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, 0, -1.66667)

[node name="wall5" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 0, -1.66667)

[node name="wall_corner8" parent="Walls" instance=ExtResource("7_hptm8")]
transform = Transform3D(1, 0, 6.3573e-08, 0, 1, 0, -6.3573e-08, 0, 1, 6, 0, -5)

[node name="wall_corner9" parent="Walls" instance=ExtResource("7_hptm8")]
transform = Transform3D(1.19249e-08, 0, 1, 0, 1, 0, -1, 0, 1.19249e-08, -6, 0, -5)

[node name="wall14" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, 4, -1.66667)

[node name="wall15" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -2, 4, -5)

[node name="wall16" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2, 4, -5)

[node name="wall17" parent="Walls" instance=ExtResource("6_ynf5e")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 4, -1.66667)

[node name="wall_corner10" parent="Walls" instance=ExtResource("7_hptm8")]
transform = Transform3D(1, 0, 6.3573e-08, 0, 1, 0, -6.3573e-08, 0, 1, 6, 4, -5)

[node name="wall_corner11" parent="Walls" instance=ExtResource("7_hptm8")]
transform = Transform3D(1.19249e-08, 0, 1, 0, 1, 0, -1, 0, 1.19249e-08, -6, 4, -5)

[node name="wall_doorway2" parent="Walls" instance=ExtResource("5_344ge")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)

[node name="wall_half2" parent="Walls" instance=ExtResource("11_hibaj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -5)

[node name="wall_half3" parent="Walls" instance=ExtResource("11_hibaj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -5)

[node name="ceiling_tile2" parent="Walls" instance=ExtResource("12_pdsj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 7, -3)

[node name="ceiling_tile3" parent="Walls" instance=ExtResource("12_pdsj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, -3)

[node name="ceiling_tile4" parent="Walls" instance=ExtResource("12_pdsj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 7, -3)

[node name="ceiling_tile5" parent="Walls" instance=ExtResource("12_pdsj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 7, 1)

[node name="ceiling_tile6" parent="Walls" instance=ExtResource("12_pdsj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 1)

[node name="ceiling_tile7" parent="Walls" instance=ExtResource("12_pdsj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 7, 1)

[node name="ceiling_tile8" parent="Walls" instance=ExtResource("12_pdsj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 7, 5)

[node name="ceiling_tile9" parent="Walls" instance=ExtResource("12_pdsj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 5)

[node name="ceiling_tile10" parent="Walls" instance=ExtResource("12_pdsj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 7, 5)

[node name="Floor" type="Node3D" parent="."]

[node name="floor_tile_large10" parent="Floor" instance=ExtResource("6_6bp64")]

[node name="floor_tile_large11" parent="Floor" instance=ExtResource("6_6bp64")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)

[node name="floor_tile_large12" parent="Floor" instance=ExtResource("6_6bp64")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="floor_tile_large13" parent="Floor" instance=ExtResource("6_6bp64")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="floor_tile_large14" parent="Floor" instance=ExtResource("6_6bp64")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4)

[node name="floor_tile_large15" parent="Floor" instance=ExtResource("6_6bp64")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -4)

[node name="floor_tile_large16" parent="Floor" instance=ExtResource("6_6bp64")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="floor_tile_large17" parent="Floor" instance=ExtResource("6_6bp64")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 4)

[node name="floor_tile_large18" parent="Floor" instance=ExtResource("6_6bp64")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 4)

[node name="Skeletons" type="Node3D" parent="."]

[node name="Skeleton7" type="Node3D" parent="Skeletons"]

[node name="chair2" parent="Skeletons/Skeleton7" instance=ExtResource("11_h1bgf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1)

[node name="Skeleton_Minion" parent="Skeletons/Skeleton7" instance=ExtResource("12_b3802")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 1)

[node name="Skeleton2" type="Node3D" parent="Skeletons"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 2)

[node name="chair2" parent="Skeletons/Skeleton2" instance=ExtResource("11_h1bgf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1)

[node name="Skeleton_Minion" parent="Skeletons/Skeleton2" instance=ExtResource("12_b3802")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 1)

[node name="Skeleton3" type="Node3D" parent="Skeletons"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 1, 0, 1)

[node name="chair2" parent="Skeletons/Skeleton3" instance=ExtResource("11_h1bgf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1)

[node name="Skeleton_Minion" parent="Skeletons/Skeleton3" instance=ExtResource("12_b3802")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 1)

[node name="Skeleton4" type="Node3D" parent="Skeletons"]
transform = Transform3D(-1.49012e-07, 0, 1, 0, 1, 0, -1, 0, -1.49012e-07, -1, 0, -1)

[node name="chair2" parent="Skeletons/Skeleton4" instance=ExtResource("11_h1bgf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1)

[node name="Skeleton_Minion" parent="Skeletons/Skeleton4" instance=ExtResource("12_b3802")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 1)

[node name="Skeleton5" type="Node3D" parent="Skeletons"]
transform = Transform3D(1, 0, 1.053e-07, 0, 1, 0, -1.053e-07, 0, 1, 0, 0, -2)

[node name="chair2" parent="Skeletons/Skeleton5" instance=ExtResource("11_h1bgf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1)

[node name="Skeleton_Minion" parent="Skeletons/Skeleton5" instance=ExtResource("12_b3802")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 1)

[node name="Props" type="Node3D" parent="."]

[node name="torch_mounted" parent="Props" instance=ExtResource("13_fevyy")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.01212, 2.17293, 5.7319)

[node name="torch_mounted2" parent="Props" instance=ExtResource("13_fevyy")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.98788, 2.17293, 5.7319)

[node name="torch_mounted5" parent="Props" instance=ExtResource("13_fevyy")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -1.98788, 2.17293, -4.7)

[node name="torch_mounted6" parent="Props" instance=ExtResource("13_fevyy")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 2.01212, 2.17293, -4.7)

[node name="torch_mounted3" parent="Props" instance=ExtResource("13_fevyy")]
transform = Transform3D(0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, 0.258819, -5.7, 2.173, 2.732)

[node name="torch_mounted7" parent="Props" instance=ExtResource("13_fevyy")]
transform = Transform3D(0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, 0.258819, -5.7, 2.173, -2.268)

[node name="torch_mounted4" parent="Props" instance=ExtResource("13_fevyy")]
transform = Transform3D(1.78814e-07, 0, -1, 0, 1, 0, 1, 0, 1.78814e-07, 5.7, 2.173, 2.732)

[node name="torch_mounted8" parent="Props" instance=ExtResource("13_fevyy")]
transform = Transform3D(1.78814e-07, 0, -1, 0, 1, 0, 1, 0, 1.78814e-07, 5.7, 2.173, -2.268)

[node name="box_stacked2" parent="Props" instance=ExtResource("15_pdsj5")]
transform = Transform3D(-0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, -0.965926, 4, 0, 4)

[node name="crates_stacked2" parent="Props" instance=ExtResource("16_ee4r6")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4, 0, 4)

[node name="chest_gold2" parent="Props" instance=ExtResource("17_gt3je")]
transform = Transform3D(-0.562589, 0, 0.826737, 0, 1, 0, -0.826737, 0, -0.562589, -4.44126, 0, 1.81937)

[node name="Border" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="Border"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Border/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000499964, 0, 0)
shape = SubResource("BoxShape3D_hibaj")

[node name="StaticBody3D2" type="StaticBody3D" parent="Border"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Border/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000499964, 0, 0)
shape = SubResource("BoxShape3D_hibaj")

[node name="StaticBody3D3" type="StaticBody3D" parent="Border"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, -2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Border/StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000499964, 0, 0)
shape = SubResource("BoxShape3D_hibaj")

[node name="StaticBody3D4" type="StaticBody3D" parent="Border"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, 2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Border/StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000499964, 0, 0)
shape = SubResource("BoxShape3D_hibaj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 192.0
offset_bottom = 110.0
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("21_pdsj5")

[node name="Label" type="Label" parent="CanvasLayer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_6iyac")
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="WaveCounter" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -144.0
offset_top = 10.0
offset_right = 38.0
offset_bottom = 110.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("21_pdsj5")

[node name="WaveCounterLabel" type="Label" parent="CanvasLayer/WaveCounter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_6iyac")
theme_override_font_sizes/font_size = 32
text = "Wave: 1"

[node name="Health" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -40.0
offset_right = 224.0
grow_vertical = 0
scale = Vector2(0.75, 0.75)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Health"]
layout_mode = 2
texture = ExtResource("19_u50mg")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Health"]
layout_mode = 2
texture = ExtResource("19_u50mg")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Health"]
layout_mode = 2
texture = ExtResource("19_u50mg")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/Health"]
layout_mode = 2
texture = ExtResource("19_u50mg")
expand_mode = 2

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer/Health"]
layout_mode = 2
texture = ExtResource("19_u50mg")
expand_mode = 2

[node name="Paused" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("9_6iyac")

[node name="PanelContainer" type="PanelContainer" parent="Paused"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Paused/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="Paused/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("10_6iyac")
theme_override_font_sizes/font_size = 64
text = "Paused"

[node name="ResumeButton" type="TextureButton" parent="Paused/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("8_hptm8")
texture_pressed = ExtResource("9_d1ilt")

[node name="Label" type="Label" parent="Paused/PanelContainer/VBoxContainer/ResumeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_6iyac")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="QuitButton" type="TextureButton" parent="Paused/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("8_hptm8")
texture_pressed = ExtResource("9_d1ilt")

[node name="Label" type="Label" parent="Paused/PanelContainer/VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_6iyac")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="End" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("23_cbgmd")

[node name="PanelContainer" type="PanelContainer" parent="End"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="End/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="End/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("10_6iyac")
theme_override_font_sizes/font_size = 64
text = "You Died"

[node name="Score" type="Label" parent="End/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("10_6iyac")
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="RestartButton" type="TextureButton" parent="End/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource("8_hptm8")
texture_pressed = ExtResource("9_d1ilt")

[node name="Label" type="Label" parent="End/PanelContainer/VBoxContainer/RestartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_6iyac")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="QuitButtonEnd" type="TextureButton" parent="End/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource("8_hptm8")
texture_pressed = ExtResource("9_d1ilt")

[node name="Label" type="Label" parent="End/PanelContainer/VBoxContainer/QuitButtonEnd"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_6iyac")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="EnemySpawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("23_gt3je")
enemy_scene = ExtResource("24_3pmx8")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gt3je")

[connection signal="pressed" from="Paused/PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Paused/PanelContainer/VBoxContainer/ResumeButton" to="Paused" method="_on_resume_button_pressed"]
[connection signal="pressed" from="Paused/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Paused/PanelContainer/VBoxContainer/QuitButton" to="Paused" method="_on_quit_button_pressed"]
[connection signal="pressed" from="End/PanelContainer/VBoxContainer/RestartButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="End/PanelContainer/VBoxContainer/RestartButton" to="End" method="_on_resume_button_pressed"]
[connection signal="pressed" from="End/PanelContainer/VBoxContainer/RestartButton" to="End" method="_on_restart_button_pressed"]
[connection signal="pressed" from="End/PanelContainer/VBoxContainer/QuitButtonEnd" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="End/PanelContainer/VBoxContainer/QuitButtonEnd" to="Paused" method="_on_quit_button_end_pressed"]
[connection signal="pressed" from="End/PanelContainer/VBoxContainer/QuitButtonEnd" to="End" method="_on_quit_button_pressed"]
[connection signal="pressed" from="End/PanelContainer/VBoxContainer/QuitButtonEnd" to="End" method="_on_quit_button_end_pressed"]
